# mk-ultra

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  build.sh  install-macos.sh  install-windows.ps1  package-macos.sh
.github/workflows/: build.yml
cmake/: cpm.cmake
linux-binaries/: README_BINARIES.txt
linux-binaries/VST3/Entropy.vst3/Contents/Resources/: moduleinfo.json
plugin/: CMakeLists.txt
plugin/include/GrainFreeze/: Biohazard.h  BiohazardLookAndFeel.h  FactoryPresets.h  FormantShifter.h  GranularEngine.h  ModMatrix.h  ModPanel.h  PitchMatch.h  PluginEditor.h  PluginProcessor.h  PresetManager.h  Randomizer.h  SampleFreeze.h  Saturator.h  SpectralFreeze.h  TourOverlay.h  TransformRack.h  UpdateChecker.h
plugin/include/GrainFreeze/Entropy/: EntropyEngine.h
plugin/include/GrainFreeze/Mix/: MixEngine.h
plugin/include/GrainFreeze/Modulation/: MPEVoiceTracker.h  MidiNoteController.h
plugin/include/GrainFreeze/Presets/: SnapshotManager.h
plugin/include/GrainFreeze/Prettifier/: PrettifierEngine.h
plugin/source/: BiohazardLookAndFeel.cpp  GranularEngine.cpp  ModMatrix.cpp  ModPanel.cpp  PluginEditor.cpp  PluginProcessor.cpp  PresetManager.cpp  SpectralFreeze.cpp
plugin/source/Entropy/: EntropyEngine.cpp
plugin/source/Mix/: MixEngine.cpp
plugin/source/Presets/: SnapshotManager.cpp
plugin/source/Prettifier/: PrettifierEngine.cpp
test/: CMakeLists.txt
test/source/: AntiAliasTests.cpp  DuckerTests.cpp  GranularEngineTests.cpp  MPEVoiceTrackerTests.cpp  MidiNoteControllerTests.cpp  MixEngineTests.cpp  MultibandDamageTests.cpp  PrettifierEngineTests.cpp  UpdateCheckerTests.cpp
